src/css/main.css
/* TODO
*    add vars (unify margins/paddings)
*    reduce style rules (check all)
*    update content
*/
@import url('variables.css');
@import url('keyframes.css');

* {
    box-sizing: border-box;
}

html, body {
    height: 100vh;
    width: 100vw;
}

html {
    background-color: var(--html-bgc);
    font: 100%/1.6 "ALS Story", "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-smoothing: antialiased;
}

body {
    background-color: var(--body-bgc);
    font-size: var(--15-px);
}

a {
    color: var(--light-blue-font);
}

a:hover {
    color: var(--light-blue-hovered-font);
}

a:active, a:hover {
    outline: 0;
}

ul {
    list-style: circle inside;
    padding-left: 0;
    margin: 0;
}

ul ul {
    margin: var(--8-px) 0 var(--15-px) var(--30-px);
    font-size: 91%;
}

li {
    margin-bottom: var(--10-px);
}

li:last-child {
    margin-bottom: 0;
}

p {
    margin: 0;
}

input[disabled] {
    cursor: pointer !important;
    color: var(--low-gray-font);
    background-color: transparent;
    -webkit-text-fill-color: var(--low-gray-font);
    -webkit-opacity: 1;
}

input[type=text] {
    -webkit-appearance: none;
}

.page-container {
    display: grid;
    grid-template:
            "header"
            "personal-info"
            "education"
            "skills"
            "job"
            "additions"
            "contact"
            "footer";
}

.section {
    padding-top: var(--25-px);
    padding-bottom: var(--25-px);
}

.section-container {
    width: 100%;
    min-width: var(--min-layout-width);
    max-width: var(--max-layout-width);
    margin: 0 auto;
    padding-left: var(--20-px);
    padding-right: var(--20-px);
}

.main-title,
.title,
.sub-title {
    margin: 0 0 .66666667em;
    color: var(--gray-font);
    font-weight: 500;
    letter-spacing: .04em;
}

.main-title {
    font-size: var(--big-header-fsz);
    line-height: 1.3;
}

.title {
    font-size: var(--middle-header-fsz);
    line-height: 1.35;
}

.sub-title {
    font-size: var(--small-header-fsz);
    line-height: 1.5;
}

.nobullets {
    list-style: none;
}

header {
    grid-area: header;
    background-color: var(--header-bgc);
}

.personal-info {
    grid-area: personal-info;
    background-color: var(--personal-info-bgc);
    padding-top: 0;
}

.personal-info .section-container {
    display: grid;
    grid-template-areas:
            "photo"
            "cv"
            "description";
    grid-gap: var(--20-px);
}

.personal-info .photo {
    grid-area: photo;
    justify-self: center;
}

.photo img {
    width: 100%;
    max-width: var(--max-photo-width);
}

.personal-info .button-element {
    grid-area: cv;
    justify-self: center;
}

.personal-info .cv-button {
    display: inline-block;
    height: var(--36-px);
    padding: 0 var(--15-px);
    margin-bottom: var(--10-px);
    background-color: var(--bright-blue-font);
    border: 1px solid var(--bright-blue-font);
    border-radius: 4px;
    color: var(--white-font);
    font-size: var(--12-px);
    font-weight: 600;
    line-height: var(--36-px);
    letter-spacing: 0.02em;
    text-transform: uppercase;
    text-align: center;
    text-decoration: none;
    white-space: nowrap;
    cursor: pointer;
}

.personal-info .cv-button:hover {
    background-color: var(--light-blue-font);
    border-color: var(--light-blue-font);
}

.personal-info .cv-button:active {
    transform: translateY(1px);
    filter: saturate(150%);
}

.personal-info .cv-button i {
    vertical-align: middle;
    font-size: var(--17-px);
}

.personal-info .cv-button i::before {
    line-height: 0;
}

.personal-info .description {
    grid-area: description;
}

.personal-info .mail {
    display: inline-block;
    margin-bottom: var(--10-px);
    padding: var(--4-px) 0 var(--3-px) 0;
    border: dashed 1px var(--light-blue-font);
    border-radius: 1px;
    text-align: center;
}

.personal-info .copy-mail {
    display: none;
    position: relative;
    margin-left: -4px;
    padding: var(--2-px) var(--6-px);
    font-size: .9em;
    font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: var(--light-blue-font);
}

.personal-info .mail:hover {
    border-color: var(--blue-font);
}

.mail:hover + .copy-mail,
.copy-mail:hover {
    display: inline-block;
}

.copy-mail:hover {
    cursor: pointer;
}

.copied::after {
    position: absolute;
    top: -80%;
    right: -3%;
    display: block;
    content: "Скопировано";
    font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
    padding: 2px var(--3-px);
    color: var(--light-blue-font);
    opacity: 0;
    will-change: opacity, transform;
    animation: showcopied .65s ease-in-out;
}

.education {
    grid-area: education;
    background-color: var(--education-bgc);
}

.education .section-container {
    margin-bottom: var(--10-px);
}

.education .education-item {
    display: flex;
    align-items: center;
}

.education-list .education-logo {
    flex-grow: 0;
    display: flex;
    justify-content: center;
}

.education-list .education-item-text {
    flex-grow: 1;
    display: inline-block;
    margin-left: .75em;
}

.skills {
    grid-area: skills;
    background-color: var(--skills-bgc);
}

.skills .section-container {
    display: flex;
    flex-wrap: wrap;
}

.skills .sub-title {
    margin-bottom: .83333333em;
    font-size: var(--24-px);
}

.skills .languages {
    flex-basis: 100%;
    margin-bottom: var(--25-px);
}

.skills .technologies {
    flex-basis: 100%;
}

.technologies .skill {
    word-spacing: .2em;
}

.job {
    grid-area: job;
    background-color: var(--job-bgc);
}

.job .section-container {
    margin-bottom: var(--10-px);
}

.job .sub-title {
    margin-bottom: .5em;
}

.job .job-details {
    display: grid;
    grid-template:
            "name"
            "position"
            "duration"
            "logo";
    grid-gap: var(--6-px);
    justify-items: start;
    margin-bottom: var(--10-px);
}

.job .job-name {
    grid-area: name;
    align-self: center;
    font-size: 1.4em;
    color: var(--light-blue-font);
}

.job .job-position {
    grid-area: position;
    align-self: center;
    font-size: 1.2em;
}

.job .job-duration {
    grid-area: duration;
    align-self: center;
    color: var(--middle-gray-font);
}

.job .job-logo {
    grid-area: logo;
    justify-self: center;
}

.job .job-logo img {
    max-height: 8em;
}

.additions {
    grid-area: additions;
    background-color: var(--additions-bgc);
}

.additions .section-container {
    margin-bottom: var(--10-px);
}

.contact {
    grid-area: contact;
    padding-top: var(--35-px);
    padding-bottom: var(--20-px);
    background-color: var(--contact-bgc);
    font-size: var(--45-px);
    line-height: 1.3;
    text-align: center;
}

.contact .links {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    max-width: var(--500-px);
    margin: 0 auto;
}

.contact .link {
    display: inline-block;
    flex-basis: 1.5em;
    flex-shrink: 0;
}

.contact .icon {
    width: 1.11111111em;
    text-align: center;
}

.contact .tel {
    font-size: var(--18-px);
    line-height: initial;
    letter-spacing: normal;
}

.contact .icon[class*=" icon-"]::before,
.contact .icon [class^=icon-]::before {
    width: auto;
    margin: 0;
}

footer {
    grid-area: footer;
    padding-top: var(--20-px);
    padding-bottom: var(--20-px);
    background-color: var(--footer-bgc);
    color: var(--light-gray-font);
    text-align: center;
    font: 100 var(--11-px) "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
    letter-spacing: .3em;
}

@media screen and (min-width: 25em) {
    .section-container {
        width: 85%;
        padding-left: 0;
        padding-right: 0;
    }

    .job .job-details {
        grid-template-columns: 3fr 1fr;
        grid-template-areas:
                "name     logo"
                "position logo"
                "duration logo"
                ".        logo";
    }

    .contact .link {
        flex-grow: 1;
    }
}

@media screen and (min-width: 34.375em) {
    :root {
        --big-header-fsz: var(--36-px);
        --middle-header-fsz: var(--30-px);
        --small-header-fsz: var(--24-px);
        --max-photo-width: var(--200-px);
    }
    .section-container {
        width: 80%;
        padding-left: 0;
        padding-right: 0;
    }

    .personal-info .section-container {
        grid-template-columns: 3fr 7fr;
        grid-template-areas:
                "photo description"
                "cv    description";
    }

    .skills .section-container {
        flex-wrap: nowrap;
    }

    .skills .sub-title {
        letter-spacing: normal;
    }

    .skills .languages {
        flex-basis: auto;
        width: 40%;
        margin-bottom: 0;
    }

    .skills .technologies {
        flex-basis: auto;
        width: 54%;
        margin-left: 4%;
    }

    .additions .shifted {
        margin-left: 8.66666666667%;
    }
}

